[package]
name = "telefy"
version = "1.0.0"
edition = "2024"
authors = ["darrkenn <darragh@mail.darrkenn.com>"]
description = "A crate to send logging messages to telegram"
readme = "README.md"
repository = "https://github.com/darrkenn/telefy"
license = "MIT"
keywords = ["api", "logging"]

[dependencies]
reqwest = { version= "0.12.24", features = ["json"]}
